<resources>
    <string name="app_name">BaikalOS Extras</string>
    <string name="user_interface_category">UI</string>
    <string name="system_category">BaikalOS Settings</string>
    <string name="other_category">Other</string>
    <string name="device_part_title">Device features</string>
    <string name="device_part_category">Device</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_summary">Edit status bar appearance</string>
    <string name="network_traffic_state_title">Show net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="roaming_indicator_icon_title">Roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Display roaming indicator in signal icon when in roaming mode</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar_color_title">Light colors</string>
    <string name="battery_bar_color_summary">Color range used on dark status bar</string>
    <string name="battery_bar_dark_color_title">Dark colors</string>
    <string name="battery_bar_dark_color_summary">Color range used on light status bar</string>
    <string name="battery_bar_charging_color_title">Light charging color</string>
    <string name="battery_bar_charging_color_summary">Charging color used on dark status bar</string>
    <string name="battery_bar_charging_dark_color_title">Dark charging color</string>
    <string name="battery_bar_charging_dark_color_summary">Charging color used on light status bar</string>
    <string name="battery_bar_style_title">Alignment</string>
    <string name="battery_bar_thickness_title">Thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_style_regular">Regular</string>
    <string name="battery_bar_style_center_mirrored">Center-mirrored</string>
    <string name="battery_bar_style_reversed">Reversed</string>
    <string name="battery_bar_use_charging_color_title">Custom charging color</string>
    <string name="battery_blend_start">Empty</string>
    <string name="battery_blend_end">Full</string>
    <string name="battery_blend_between">Between</string>
    <string name="smart_pulldown_dismissable">no dismissable notifications</string>
    <string name="smart_pulldown_ongoing">no ongoing notifications</string>
    <string name="smart_pulldown_summary">Open quick settings when there are %1$s</string>
    <string name="smart_pulldown_none_summary">Open quick settings when there are no notifications</string>
    <string name="smart_pulldown_off_summary">is turned off</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_save">Save</string>
    <string name="status_bar_icons_category_title">Icons</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Extended notifications control</string>
    <string name="notification_heads_up_title">Heads up</string>
    <string name="notification_heads_up_summary">Allow pop up notifications</string>
    <string name="quick_settings_title">Quick settings</string>
    <string name="quick_settings_summary">Edit quick settings appearance</string>
    <string name="daylight_header_provider" translatable="false">daylight</string>
    <string name="custom_header_browse_title">Browse installed headers</string>
    <string name="custom_header_browse_summary_new">Browse all available header collections</string>
    <string name="custom_header_pick_title">Select header image</string>
    <string name="custom_header_pick_summary">Select an image to use for static mode</string>
    <string name="header_provider_disabled">Disabled</string>
    <string name="file_header_provider" translatable="false">file</string>
    <string name="recents_title">Recents</string>
    <string name="recents_summary">Edit recents apps screen appearance</string>
    <string name="stock_recents_category">Stock recents</string>
    <string name="alternative_recents_category">Alternative recents</string>
    <string name="alternative_recents_swipe_up_enabled_warning_summary">When using swipe up home navigation to open recents, only stock recents are supported</string>
    <string name="slim_recents_title">Slim recents</string>
    <string name="recents_max_apps_title">Max allowed apps</string>
    <string name="recent_panel_scale_title">Size</string>
    <string name="recent_panel_expanded_mode_title">Expanded mode</string>
    <string name="recent_panel_expanded_mode_summary">Recent tasks expanded preview mode</string>
    <string name="recent_panel_expanded_mode_auto">Auto (default)</string>
    <string name="recent_panel_expanded_mode_always">Always</string>
    <string name="recent_panel_expanded_mode_never">Never</string>
    <string name="recent_panel_expanded_mode_disabled">Disabled</string>
    <string name="recent_panel_bg_color_title">Panel background color</string>
    <string name="recent_card_bg_color_title">Card background color</string>
    <string name="slim_recents_mem_display_long_click_clear_title">Memory bar longpress</string>
    <string name="slim_recents_mem_display_long_click_clear_summary">Clear recents by long-pressing the memory bar</string>
    <string name="slim_icon_pack_title">Icon Pack</string>
    <string name="slim_icon_pack_summary">Apply a custom icon pack for apps in the panel</string>
    <string name="no_iconpacks_summary">No icon packs installed</string>
    <string name="dialog_pick_iconpack_title">Pick icon pack</string>
    <string name="default_iconpack_title">Default icons</string>
    <string name="slim_recents_corner_radius_title">Card corner radius</string>
    <string name="slim_recents_aicp_empty_drawable_title">AICP empty recents</string>
    <string name="slim_recents_aicp_empty_drawable_summary">Image to show when no recent apps</string>
    <string name="recent_panel_lefty_mode_title">Show on the left edge</string>
    <string name="recent_panel_lefty_mode_summary">Show recent apps panel on the left edge</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="slim_blacklist_apps_cat_title">Blacklist</string>
    <string name="slim_blacklist_apps_title">Apps blacklist</string>
    <string name="slim_blacklist_apps_summary">Apps to not show in the panel</string>
    <string name="slim_blacklist_add_apps_title">Add app</string>
    <string name="slim_blacklist_add_apps_summary">Tap here to add, tap on added app to remove it</string>
    <string name="recent_app_sidebar_title">Recents app sidebar</string>
    <string name="recent_app_sidebar_summary">Show app shortcuts on the other edge</string>
    <string name="use_recent_app_sidebar_title">Enable app sidebar</string>
    <string name="use_recent_app_sidebar_summary">Show app shortcuts on the other edge</string>
    <string name="recent_app_sidebar_content_title">Sidebar content</string>
    <string name="recent_app_sidebar_content_summary">Configure the content of the app sidebar</string>
    <string name="recent_app_sidebar_style_title">Sidebar style</string>
    <string name="recent_app_sidebar_style_summary">Change the look of the sidebar</string>
    <string name="recent_app_sidebar_hide_labels_title">Hide icon labels</string>
    <string name="recent_app_sidebar_label_color_title">Label color</string>
    <string name="recent_app_sidebar_bg_color_title">Background color</string>
    <string name="recent_app_sidebar_scale_title">Size</string>
    <string name="recent_app_sidebar_open_simultaneously_title">Open simultaneously with recents</string>
    <string name="recent_app_sidebar_open_simultaneously_summary">Reduce recents opening lag by disabling this</string>
    <string name="slim_recents_mem_display_category_title">Memory bar</string>
    <string name="slim_recents_mem_display_title">Show memory bar</string>
    <string name="slim_recents_mem_display_summaryOn">Memory bar enabled</string>
    <string name="slim_recents_mem_display_summaryOff">Memory bar disabled</string>
    <string name="slim_recents_mem_display_color">Memory bar color</string>
    <string name="slim_recents_mem_display_text_color">Memory bar text color</string>
    <string name="lockscreen_title">Lockscreen</string>
    <string name="lockscreen_summary">Edit lockscreen appearance</string>
    <string name="lockscreen_security_category">Security</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary_on">Vibrate on successful fingerprint authentication enabled</string>
    <string name="fprint_sucess_vib_summary_off">Vibrate on successful fingerprint authentication disabled</string>
    <string name="fp_unlock_keystore_title">FP unlock</string>
    <string name="log_it_title">Save Logs</string>
    <string name="log_it_summary">Logcat, kmesg, dmesg</string>
    <string name="logcat_title">Logcat</string>
    <string name="logcat_radio_title">Radio log</string>
    <string name="kmesg_title">Kmesg</string>
    <string name="dmesg_title">Dmesg</string>
    <string name="log_it_now_title">Save</string>
    <string name="log_it_now_summary">Be patient for the logs to be created</string>
    <string name="log_it_share_type_title">Share method</string>
    <string name="baikalos_debug_title">Verbose log</string>
    <string name="baikalos_debug_summary">Enable verbose logging. Do not enable without a reason</string>
    <string name="about_title">About</string>
    <string name="about_summary">View information about this ROM</string>
    <string name="weblinks_category">Weblinks</string>
    <string name="info_category">Info</string>
    <string name="baikalos_website_title">Website</string>
    <string name="baikalos_website_summary">Visit the BaikalOS website</string>
    <string name="baikalos_website_link" translatable="false">"http://baikalos-rom.com"</string>
    <string name="g_plus_title">G+ community</string>
    <string name="g_plus_summary">Visit our Google+ Community</string>
    <string name="g_plus_link" translatable="false">"https://plus.google.com/communities/101008638920580274588"</string>
    <string name="baikalos_gerrit_title">Gerrit</string>
    <string name="baikalos_gerrit_summary">Visit our gerrit to know what we are working on</string>
    <string name="baikalos_gerrit_link" translatable="false">"http://gerrit.baikalos-rom.com"</string>
    <string name="baikalos_changelog_title">Changelog</string>
    <string name="baikalos_changelog_summary">View recent changes made to BaikalOS</string>
    <string name="baikalos_downloads_title">Downloads</string>
    <string name="baikalos_downloads_summary">Visit the BaikalOS download page for your device</string>
    <string name="baikalos_ota_title">Update center</string>
    <string name="baikalos_ota_summary">Check for BaikalOS updates</string>
    <string name="stats_title">Statistics</string>
    <string name="stats_summary">Opt in/out for anonymous stats</string>
    <string name="device_maintainer_title">Device maintainer</string>
    <string name="launcher_shortcut_disabled_message">Shortcut disabled</string>
</resources>