<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2017-2018 AICP
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <!-- BaikalOS logo -->
    <com.aicp.gear.preference.LongClickablePreference
        android:key="baikalos_logo"
        android:layout="@layout/dashboard_logo" />

    <!-- PreferenceCategory
        android:title="@string/device_part_category" -->

        <!-- Device Part -->
        <Preference
            android:key="device_part"
            android:persistent="false"
            android:title="@string/device_part_title"
            android:icon="@drawable/ic_settings_device">
            <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="org.lineageos.settings.device"
                 android:targetClass="org.lineageos.settings.device.DeviceSettings"/>
        </Preference>

    <!-- /PreferenceCategory -->

    <!-- PreferenceCategory
        android:key="app_setings_cat"
        android:title="@string/app_settings_category">

        <Preference
            android:key="app_setings"
            android:title="@string/app_settings_title"
            android:summary="@string/app_settings_summary" >
            <intent 
                android:targetPackage="ru.baikalos.extras"
                android:targetClass="ru.baikalos.extras.AppProfilesActivity"/>
        </Preference>


    </PreferenceCategory -->


    <PreferenceCategory
        android:title="@string/system_category">

        <!--PreferenceScreen
            android:title="@string/system_behaviour_title"
            android:summary="@string/system_behaviour_summary"
            android:icon="@drawable/ic_settings_system_behaviour"
            android:fragment="ru.baikalos.extras.fragments.SystemBehaviour" / -->

        <!-- PreferenceScreen
            android:title="@string/system_extensions_title"
            android:summary="@string/system_extensions_summary"
            android:icon="@drawable/ic_settings_system_extensions"
            android:fragment="ru.baikalos.extras.fragments.SystemExtensions" / -->


        <PreferenceScreen
            android:title="@string/audio_tweaks_title"
            android:summary="@string/audio_tweaks_summary"
            android:icon="@drawable/ic_settings_system_audio"
            android:fragment="ru.baikalos.extras.fragments.AudioTweaks" />

        <PreferenceScreen
            android:title="@string/powersave_title"
            android:summary="@string/powersave_summary"
            android:icon="@drawable/ic_settings_system_powersave"
            android:fragment="ru.baikalos.extras.fragments.PowerSave" />

        <!-- PreferenceScreen
            android:title="@string/torch_title"
            android:summary="@string/torch_summary"
            android:icon="@drawable/ic_settings_torch"
            android:fragment="ru.baikalos.extras.fragments.Torch" / -->

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other_category">

        <PreferenceScreen
            android:title="@string/about_title"
            android:summary="@string/about_summary"
            android:icon="@drawable/ic_settings_about"
            android:fragment="ru.baikalos.extras.fragments.About" />

        <Preference
            android:key="baikalos_ota"
            android:title="@string/baikalos_ota_title"
            android:summary="@string/baikalos_ota_summary"
            android:icon="@drawable/ic_settings_ota" />

        <PreferenceScreen
            android:key="log_it"
            android:title="@string/log_it_title"
            android:summary="@string/log_it_summary"
            android:icon="@drawable/ic_settings_log_it"
            android:fragment="ru.baikalos.extras.fragments.LogIt" />

        <!-- PreferenceScreen
            android:title="@string/ae_settings_title"
            android:summary="@string/ae_settings_summary"
            android:icon="@drawable/ic_settings_ae_customization"
            android:fragment="ru.baikalos.extras.fragments.AeSettings" / -->

    </PreferenceCategory>
</PreferenceScreen>
