<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="changelog"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_shortcut_changelog"
        android:shortcutDisabledMessage="@string/launcher_shortcut_disabled_message"
        android:shortcutLongLabel="@string/baikalos_changelog_title"
        android:shortcutShortLabel="@string/baikalos_changelog_title">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="ru.baikalos.extras.changelog.ChangelogActivity"
            android:targetPackage="ru.baikalos.extras" />
    </shortcut>

    <shortcut
        android:shortcutId="gerrit"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_shortcut_gerrit"
        android:shortcutDisabledMessage="@string/launcher_shortcut_disabled_message"
        android:shortcutLongLabel="@string/baikalos_gerrit_title"
        android:shortcutShortLabel="@string/baikalos_gerrit_title">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://gerrit.baikalos-rom.com"/>
    </shortcut>

    <shortcut
        android:shortcutId="g_plus"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_shortcut_g_plus"
        android:shortcutDisabledMessage="@string/launcher_shortcut_disabled_message"
        android:shortcutLongLabel="@string/g_plus_title"
        android:shortcutShortLabel="@string/g_plus_title">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://plus.google.com/communities/101008638920580274588"/>
    </shortcut>

</shortcuts>
